force-app/main/default/objects/Activity/fields/Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date_Time__c</fullName>
    <label>Activity Date Time</label>
    <type>DateTime</type>
</CustomField>