force-app/main/default/objects/Activity/fields/Activity_Event__c.field-meta.xml
<CustomField>
    <fullName>Activity_Event__c</fullName>
    <label>Activity Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>