force-app/main/default/objects/Activity/fields/Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>Activity_Time__c</fullName>
    <formula>LEFT(RIGHT(text( Activity_Date_Time__c + 330/1440),9),8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Time</label>
    <type>Text</type>
</CustomField>