force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sign up</fullName>
            </value>
            <value>
                <fullName>Test Registered</fullName>
            </value>
            <value>
                <fullName>Test Taken</fullName>
            </value>
            <value>
                <fullName>Talk to Us</fullName>
            </value>
            <value>
                <fullName>Payment Failed</fullName>
            </value>
            <value>
                <fullName>Payment Successful</fullName>
            </value>
            <value>
                <fullName>No Cost EMI Financepeer</fullName>
            </value>
            <value>
                <fullName>Lead from Support Chat</fullName>
            </value>
            <value>
                <fullName>Abandoned Cart</fullName>
            </value>
            <value>
                <fullName>Brochure Download</fullName>
            </value>
            <value>
                <fullName>Course Selection</fullName>
            </value>
            <value>
                <fullName>Course Page - Career Impact PDF Download</fullName>
            </value>
            <value>
                <fullName>Pay Now Clicked</fullName>
            </value>
            <value>
                <fullName>Stage Changed</fullName>
            </value>
            <value>
                <fullName>Email Interaction</fullName>
            </value>
            <value>
                <fullName>IVR Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>