force-app/main/default/objects/Activity/fields/ActivityNote__c.field-meta.xml
<CustomField>
    <fullName>ActivityNote__c</fullName>
    <label>ActivityNote</label>
    <type>TextArea</type>
</CustomField>