force-app/main/default/objects/Activity/fields/Actual_Attendees_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Actual_Attendees_Email_List__c</fullName>
    <label>Actual Attendees Email List</label>
    <type>TextArea</type>
</CustomField>