force-app/main/default/objects/Activity/fields/AO_Availability__c.field-meta.xml
<CustomField>
    <fullName>AO_Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AO Availability</label>
    <referenceTo>AO_Availability__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>