force-app/main/default/objects/Activity/fields/Attendees_Except_BDE__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Except_BDE__c</fullName>
    <label>Attendees Except BDE</label>
    <type>TextArea</type>
</CustomField>