force-app/main/default/objects/Activity/fields/Attendees_list__c.field-meta.xml
<CustomField>
    <fullName>Attendees_list__c</fullName>
    <label>Attendees list</label>
    <type>TextArea</type>
</CustomField>