force-app/main/default/objects/Activity/fields/Beep_Effect__c.field-meta.xml
<CustomField>
    <fullName>Beep_Effect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beep Effect</label>
    <type>Checkbox</type>
</CustomField>