force-app/main/default/objects/Activity/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Call Duration (in Seconds)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>