force-app/main/default/objects/Activity/fields/Call_recording__c.field-meta.xml
<CustomField>
    <fullName>Call_recording__c</fullName>
    <formula>HYPERLINK(wk_exo__call_recording_url__c, &quot;Listen Call Recording&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call recording</label>
    <type>Text</type>
</CustomField>