force-app/main/default/objects/Activity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>if(OR(Course_Name__c = &apos;Data Science Course&apos;,
Course_Name__c = &apos;Software Testing Course&apos;,
Course_Name__c = &apos;Graphic Design Course&apos;,
Course_Name__c = &apos;Frontend Development Course&apos;,
Course_Name__c = &apos;Fullstack Development Course&apos;,
Course_Name__c = &apos;Backend Development Course&apos;),
&apos;Tech&apos;,&apos;Business&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>