force-app/main/default/objects/Activity/fields/Cohort_Id__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Id__c</fullName>
    <label>Cohort Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>