force-app/main/default/objects/Activity/fields/Cohort_Name__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Name__c</fullName>
    <label>Cohort Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>