force-app/main/default/objects/Activity/fields/Course_Slug__c.field-meta.xml
<CustomField>
    <fullName>Course_Slug__c</fullName>
    <label>Course Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>