force-app/main/default/objects/Activity/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Current Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>