force-app/main/default/objects/Activity/fields/Date_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Payment__c</fullName>
    <label>Date of Payment</label>
    <type>DateTime</type>
</CustomField>