force-app/main/default/objects/Activity/fields/Exam_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Booked_Date__c</fullName>
    <label>Exam Booked Date</label>
    <type>DateTime</type>
</CustomField>