force-app/main/default/objects/Activity/fields/Exam_Score__c.field-meta.xml
<CustomField>
    <fullName>Exam_Score__c</fullName>
    <label>Exam Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>