force-app/main/default/objects/Activity/fields/Exam_Slug__c.field-meta.xml
<CustomField>
    <fullName>Exam_Slug__c</fullName>
    <label>Exam Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>