force-app/main/default/objects/Activity/fields/Exotel_call_Duration_min_Sec__c.field-meta.xml
<CustomField>
    <fullName>Exotel_call_Duration_min_Sec__c</fullName>
    <formula>FLOOR(VALUE(wk_exo__Total_Talk_Time__c  ) /60) +  MOD(VALUE(wk_exo__Total_Talk_Time__c  ),60)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exotel : call Duration (min&amp;Sec)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>