force-app/main/default/objects/Activity/fields/Follow_Up_Activity_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Activity_Datetime__c</fullName>
    <label>Follow Up Activity Datetime</label>
    <type>DateTime</type>
</CustomField>