force-app/main/default/objects/Activity/fields/Gmeet_call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Gmeet_call_Duration__c</fullName>
    <label>Gmeet call Duration(in min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>