force-app/main/default/objects/Activity/fields/GMeet_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>GMeet_Event_Id__c</fullName>
    <label>GMeet Event Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>