force-app/main/default/objects/Activity/fields/Is_Qualified_in_Exam__c.field-meta.xml
<CustomField>
    <fullName>Is_Qualified_in_Exam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Qualified in Exam</label>
    <type>Checkbox</type>
</CustomField>