force-app/main/default/objects/Activity/fields/Is_Remarketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Is_Remarketing_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Remarketing Activity</label>
    <type>Checkbox</type>
</CustomField>