force-app/main/default/objects/Activity/fields/IsGmeetRecordingAvailable__c.field-meta.xml
<CustomField>
    <fullName>IsGmeetRecordingAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Gmeet Recording Available</label>
    <type>Checkbox</type>
</CustomField>