force-app/main/default/objects/Activity/fields/IsSMInvited__c.field-meta.xml
<CustomField>
    <fullName>IsSMInvited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSMInvited</label>
    <type>Checkbox</type>
</CustomField>