force-app/main/default/objects/Activity/fields/IsSSMInvited__c.field-meta.xml
<CustomField>
    <fullName>IsSSMInvited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSSMInvited</label>
    <type>Checkbox</type>
</CustomField>