force-app/main/default/objects/Activity/fields/Lead_del__c.field-meta.xml
<CustomField>
    <fullName>Lead_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_del</relationshipName>
    <type>Lookup</type>
</CustomField>