force-app/main/default/objects/Activity/fields/LSQ_Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>LSQ_Activity_Date_Time__c</fullName>
    <formula>Activity_Date_Time__c  + 330/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LSQ Activity Date Time</label>
    <type>DateTime</type>
</CustomField>