force-app/main/default/objects/Activity/fields/Managers_Invited__c.field-meta.xml
<CustomField>
    <fullName>Managers_Invited__c</fullName>
    <label>Managers Invited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>