force-app/main/default/objects/Activity/fields/meeting_Url_Charcter__c.field-meta.xml
<CustomField>
    <fullName>meeting_Url_Charcter__c</fullName>
    <formula>RIGHT( Meeting_URL__c , 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>meeting Url Charcter</label>
    <type>Text</type>
</CustomField>