force-app/main/default/objects/Activity/fields/Meeting_URL_Click_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL_Click_Time__c</fullName>
    <label>Meeting URL Click Time</label>
    <type>DateTime</type>
</CustomField>