force-app/main/default/objects/Activity/fields/Next_FollowUp_Activity_date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_FollowUp_Activity_date_Time__c</fullName>
    <label>Next FollowUp Activity date/Time</label>
    <type>DateTime</type>
</CustomField>