force-app/main/default/objects/Activity/fields/Numeric_Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Call_Recording__c</fullName>
    <formula>ISNUMBER(wk_exo__call_recording_url__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numeric Call Recording</label>
    <type>Checkbox</type>
</CustomField>