force-app/main/default/objects/Activity/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>