force-app/main/default/objects/Activity/fields/Overdue_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Date_Time__c</fullName>
    <label>Overdue Date Time</label>
    <type>DateTime</type>
</CustomField>