force-app/main/default/objects/Activity/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>