force-app/main/default/objects/Activity/fields/Payment_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Failure_Reason__c</fullName>
    <label>Payment Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>