force-app/main/default/objects/Activity/fields/Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_type__c</fullName>
    <label>Payment type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>