force-app/main/default/objects/Activity/fields/Recording_Available__c.field-meta.xml
<CustomField>
    <fullName>Recording_Available__c</fullName>
    <formula>IF(wk_exo__call_recording_url__c != null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recording Available</label>
    <type>Checkbox</type>
</CustomField>