force-app/main/default/objects/Activity/fields/Search_By_Value__c.field-meta.xml
<CustomField>
    <fullName>Search_By_Value__c</fullName>
    <label>Search By Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>