force-app/main/default/objects/Activity/fields/SearchByValue__c.field-meta.xml
<CustomField>
    <fullName>SearchByValue__c</fullName>
    <label>SearchByValue</label>
    <length>35</length>
    <type>Text</type>
</CustomField>