force-app/main/default/objects/Activity/fields/Skill_Based_Exam_Score__c.field-meta.xml
<CustomField>
    <fullName>Skill_Based_Exam_Score__c</fullName>
    <label>Skill Based Exam Score</label>
    <type>TextArea</type>
</CustomField>