force-app/main/default/objects/Activity/fields/Stage_Changed__c.field-meta.xml
<CustomField>
    <fullName>Stage_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage Changed</label>
    <type>Checkbox</type>
</CustomField>