force-app/main/default/objects/Activity/fields/Student_Availability__c.field-meta.xml
<CustomField>
    <fullName>Student_Availability__c</fullName>
    <label>Student Availability</label>
    <type>DateTime</type>
</CustomField>