force-app/main/default/objects/Activity/fields/Task_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Task_OwnerId__c</fullName>
    <formula>CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task OwnerId</label>
    <type>Text</type>
</CustomField>