force-app/main/default/objects/Activity/fields/Tier_Info__c.field-meta.xml
<CustomField>
    <fullName>Tier_Info__c</fullName>
    <label>Tier Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>