force-app/main/default/objects/Activity/fields/Updated_by_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_Scheduler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated by Scheduler</label>
    <type>Checkbox</type>
</CustomField>